# reolink-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  config.example.yaml  pyproject.toml  server.json
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/03-safe-controls-safety-rails/: 03-01-SUMMARY.md  03-02-SUMMARY.md  03-03-SUMMARY.md  03-REVIEW.md
.planning/phases/04-packaging-release/: 04-01-SUMMARY.md  04-02-SUMMARY.md  04-REVIEW.md  04-VERIFICATION.md
.planning/todos/pending/: 2026-07-12-add-quick-reply-audio-playback-tool-play-quick-reply.md  2026-07-12-add-set-anti-flicker-tool-upstream-reolink-aio-first.md
scripts/: packaging_smoke.py  qa_phase1.py  qa_phase2.py  qa_phase3.py
src/reolink_mcp/: __main__.py  config.py
src/reolink_mcp/tools/: __init__.py  control.py  observe.py
tests/: conftest.py  test_config.py  test_errors.py  test_server.py  test_stdout_purity.py
tests/tools/: test_control.py  test_observe.py
