[project]
name = "reolink-mcp"
version = "0.1.0"
description = "MCP server for Reolink cameras: snapshots, device state, AI detection, PTZ, and deterrence controls over the local network."
authors = [
    { name = "Eduard Dryha", email = "eduard_dryha@epam.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.28,<2",
    "reolink-aio~=0.21.3",
    "pydantic-settings[yaml]>=2.14",
    "pillow",
]

[project.scripts]
reolink-mcp = "reolink_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reolink_mcp"]

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]
